--- a/Aula 12/aula12/src/app/app.component.html
+++ b/Aula 12/aula12/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-menu-superior></app-menu-superior>
 <router-outlet></router-outlet>
-<app-lista-usuario></app-lista-usuario>
+<app-apolice></app-apolice>
