Aula 14 - rota e formulário

--- a/Aula 12/aula12/src/app/menu-superior/menu-superior.component.html
+++ b/Aula 12/aula12/src/app/menu-superior/menu-superior.component.html
@@ -1,11 +1,32 @@
 <header class="d-flex justify-content-center py-3">
   <ul class="nav nav-pills">
     <li class="nav-item">
-      <a href="#" class="nav-link active" aria-current="page">Home</a>
+      <a
+        href="javascript:void(0);"
+        routerLink="/apolice"
+        routerLinkActive="active"
+        class="nav-link"
+        >Apólice</a
+      >
     </li>
-    <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
-    <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-    <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-    <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+    <li class="nav-item">
+      <a
+        href="javascript:void(0);"
+        class="nav-link"
+        routerLink="/lista-usuario"
+        routerLinkActive="active"
+        >Lista Usuários</a
+      >
+    </li>
+
+    <li class="nav-item">
+      <a
+        href="javascript:void(0);"
+        routerLink="tela-pai"
+        routerLinkActive="active"
+        class="nav-link"
+        >Tela Pai</a
+      >
+    </li>
   </ul>
 </header>
