--- a/Aula 12/aula12/src/app/inserir-usuario/inserir-usuario.component.html
+++ b/Aula 12/aula12/src/app/inserir-usuario/inserir-usuario.component.html
@@ -1,1 +1,32 @@
-<p>inserir-usuario works!</p>
+<form #myForm="ngForm" (ngSubmit)="submitForm(myForm)">
+  <label class="form-label" for="nome">Nome</label>
+  <input
+    class="form-control"
+    type="text"
+    id="nome"
+    name="nome"
+    ngModel
+    required
+  />
+  <label class="form-label" for="email">E-mail</label>
+  <input
+    class="form-control"
+    type="text"
+    id="email"
+    name="email"
+    ngModel
+    required
+  />
+  <label class="form-label" for="senha">Senha</label>
+  <input
+    class="form-control"
+    type="text"
+    id="senha"
+    name="senha"
+    ngModel
+    required
+  />
+  <button type="submit" class="btn btn-primary" [disabled]="!myForm.valid">
+    Salvar
+  </button>
+</form>
