--- a/Aula 12/aula12/src/app/menu-superior/menu-superior.component.html
+++ b/Aula 12/aula12/src/app/menu-superior/menu-superior.component.html
@@ -28,5 +28,14 @@
         >Tela Pai</a
       >
     </li>
+    <li class="nav-item">
+      <a
+        href="javascript:void(0);"
+        routerLink="inserir-usuario"
+        routerLinkActive="active"
+        class="nav-link"
+        >Inserir Usuário</a
+      >
+    </li>
   </ul>
 </header>
