--- a/Aula 12/aula12/src/app/usuario/lista-usuario/lista-usuario.component.html
+++ b/Aula 12/aula12/src/app/usuario/lista-usuario/lista-usuario.component.html
@@ -1,5 +1,13 @@
 <div class="container">
   <div class="row">
+    <div class="col-12">
+      <a
+        href="javascript:void(0)"
+        class="btn btn-primary"
+        routerLink="/inserir-usuario"
+        >Novo Usuário</a
+      >
+    </div>
     <div class="col-md-12">
       <table class="table table-hover table-striped">
         <thead>
